--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,3 +1,6 @@
+.letter-spacing-none {
+  letter-spacing: 0;
+}
 // drawer nav
 .q-drawer {
   .q-item {
@@ -12,4 +15,10 @@
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   margin-left: 10px;
+}
+
+.q-popup-edit__buttons {
+  .q-btn {
+    text-transform: none;
+  }
 }
