--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -22,3 +22,15 @@ input::-webkit-inner-spin-button {
     text-transform: none;
   }
 }
+
+.entries {
+  .q-slide-item {
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    &:not(:first-child) {
+      margin-top: -1px;
+    }
+  }
+  .sortable-ghost {
+    opacity: 0;
+  }
+}
