--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,6 +1,17 @@
 .letter-spacing-none {
   letter-spacing: 0;
 }
+
+//dark
+.body--dark {
+  .bg-primary, .q-layout__section--marginal {
+    background-color: $primary-dark !important;
+  }
+  .q-drawer {
+    border: none !important;
+  }
+}
+
 // drawer nav
 .q-drawer {
   .q-item {
@@ -26,6 +37,8 @@ input::-webkit-inner-spin-button {
 .entries {
   .q-slide-item {
     border: 1px solid rgba(0, 0, 0, 0.12);
+    .body--dark & { border: 1px solid rgba(255, 255, 255, 0.2);
+    }
     &:not(:first-child) {
       margin-top: -1px;
     }
