--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -23,3 +23,6 @@ $positive  : #7eb004;
 $negative  : #d73f01;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+// custom variables
+$primary-dark : darken($primary, 12%);
