--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -25,4 +25,4 @@ $info      : #31CCEC;
 $warning   : #F2C037;
 
 // custom variables
-$primary-dark : darken($primary, 12%);
+$primary-dark : rgb(0, 43.8, 38);
